# invention-mapper

./: README.md
server/: .env.example  Cargo.toml  README.md  docker-compose.yml
server/entity/src/: invention.rs  lib.rs  prelude.rs
server/migration/src/: lib.rs  m20250410_200418_create_invention_table.rs
server/src/: env.rs  main.rs
server/src/handlers/: mod.rs
server/src/handlers/invention_handlers/: create_invention.rs  create_invention_with_wiki.rs  delete_invention.rs  list_inventions.rs  mod.rs  update_invention.rs
server/src/models/: invention.rs  mod.rs
server/src/routes/: mod.rs
server/src/routes/invention_routes/: create_invention.rs  create_invention_with_wiki.rs  delete_invention.rs  list_inventions.rs  mod.rs  update_invention.rs
web/: .editorconfig  .env.example  .prettierrc.mjs  README.md  astro.config.mjs  biome.json  package.json  pnpm-lock.yaml  tsconfig.json
web/src/: store.ts
web/src/actions/: index.ts
web/src/components/: article.astro  button.astro  header.astro  image-selector.astro  input.astro  loading-icon.astro  switch.astro  textarea.astro  toast.astro
web/src/components/insert-invention-dialog/: index.astro  manual-insert-form.astro  wikipedia-link-insert-form.astro
web/src/components/map/: map.astro  styles.css
web/src/http/: api.ts
web/src/http/routes/: create-invention-with-wiki.ts  create-invention.ts  delete-invention.ts  index.ts  list-inventions.ts  update-invention.ts
web/src/layouts/: Layout.astro
web/src/pages/: index.astro
web/src/pages/detail/: [id].astro
web/src/styles/: global.css
