[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama-rs = "0.3.0"
actix-web = "4"
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
utoipa = { version = "5", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
lazy_static = "1.5.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid" ] }
cloudinary = "0.8.1"
migration = { path = "migration" }
entity = { path = "entity" }